--- a/NyarlkoS_SafetyNET.html
+++ b/NyarlkoS_SafetyNET.html
@@ -8,7 +8,7 @@
        document.onkeydown = function (e) {
        e = e || window.event;//Get event
       
-       if (!e.ctrlKey) return;
+       //if (!e.ctrlKey) return;
        var code = e.which || e.keyCode;//Get key code
        switch (code) {
        case 83://Block Ctrl+S
