--- a/NyarlkoS_SafetyNET.html
+++ b/NyarlkoS_SafetyNET.html
@@ -79,6 +79,7 @@
 			else{document.getElementsByTagName("BODY")[0].style.display = "";}
 		}
 		setInterval(safetyNet,1);
+	    getMobileOperatingSystem();
     </script>
 </body>
 </html>
